--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 
 <div class="texto-info">@ViewData["Title"]</div>
 
-@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.Contraseña>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.CambioContraseña>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
